[package]
name = "stackslib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.stackslib]
path = ".."

[dependencies.stacks-common]
path = "../../stacks-common"

# Some aarch64 CPUs don't support SHA instructions. Just use software.
[target.'cfg(target_arch = "aarch64")'.dependencies.sha2]
version = "0.10"
default-features = false
features = ["std", "force-soft"]

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "bitcoin_blocks_parser_parse_tx_raw"
path = "fuzz_targets/bitcoin_blocks_parser_parse_tx_raw.rs"
test = false
doc = false
bench = false
